fixes GH action
Signed-off-by: Michael Hausenblas <hausenbl@amazon.com>

--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -12,11 +12,11 @@ jobs:
       - name: "Check out repo and update results"
         run: |
           THISRUN=$(date +%s)
-          git clone https://github.com/prometheus/compliance.git $GITHUB_WORKSPACE/documents/compliance
-          go test --tags=compliance -v $GITHUB_WORKSPACE/documents/compliance/remote_write > $GITHUB_WORKSPACE/results/$THISRUN_remote_write
+          git clone https://github.com/prometheus/compliance.git $GITHUB_WORKSPACE/compliance
+          go test --tags=compliance -v $GITHUB_WORKSPACE/compliance/remote_write > $GITHUB_WORKSPACE/results/$THISRUN_remote_write
           git config --global user.name "GitHub Actions"
           git config --global user.email "noreply@github.com"
-          git add $THISRUN_results
+          git add $GITHUB_WORKSPACE/results/$THISRUN_remote_write
           if [ ! $(git status --porcelain | tee /dev/fd/2 | wc -c) -eq 0 ]; then
             git commit -m "auto-generated results for remote_write on $THISRUN"
             git push
