--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.3'
       - name: "Check out repo and update results"
         run: |
           cd remote_write/
