--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -8,11 +8,16 @@ jobs:
     name: Generate compliance results for remote_write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - name: "Check out compliance harness"
+        uses: actions/checkout@v2
+        with:
+          repository: "prometheus/compliance"
+          path: compliance
+      - name: "Set up Go environment"
+        uses: actions/setup-go@v2
         with:
           go-version: '^1.16.3'
-      - name: "Check out repo and update results"
+      - name: "Run tests"
         run: |
           cd remote_write/
           ./generate-results.sh
