--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -19,6 +19,6 @@ jobs:
           go-version: '^1.16.3'
       - name: "Run tests"
         run: |
-          cd remote_write/
+          cd ${GITHUB_WORKSPACE}/remote_write/
           ./generate-results.sh
           echo DONE
