--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -1,6 +1,6 @@
 name: Cron job for generating test results
 on:
-  schedule: 
+  schedule:
     - cron: '42 12 * * *' # run the job once a day
   workflow_dispatch: # enable manual trigger for dev and test
 jobs:
@@ -13,7 +13,17 @@ jobs:
       - name: "Set up Go environment"
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.16.3'
+          go-version: 1.16.x
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/Library/Caches/go-build
+            %LocalAppData%\go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: "Run tests"
         run: |
           cd ${GITHUB_WORKSPACE}/remote_write/
