--- a/.github/workflows/generate-results.yml
+++ b/.github/workflows/generate-results.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16.x
+      - name: "Set environment variables"
+        run: |
+          echo "GO111MODULE=on" >> $GITHUB_ENV
       - uses: actions/cache@v2
         with:
           path: |
